Don't wrap text in fake placeholders (to avoid FOUC)

--- a/modules/styles/mediawiki.ui/forms.less
+++ b/modules/styles/mediawiki.ui/forms.less
@@ -6,6 +6,12 @@
 //
 // Styleguide 4.
 
+.flow-ui-input-replacement-anchor {
+	// We are mimicking a placeholder, so don't wrap
+	white-space: nowrap;
+	overflow: hidden;
+}
+
 .flow-ui-input-replacement-anchor.mw-ui-input {
 	color: @colorGray7;
 	display: block;
